added textos y file

--- a/contacts.html
+++ b/contacts.html
@@ -38,7 +38,12 @@
               <a
                 href="./contacts.html"
                 class="nav-list__link nav-list__link--active"
-                >Preguntas y Respuestas etc
+                >Antes del masaje
+              </a>
+            </li>
+            <li class="nav-list__item">
+              <a href="después.html" class="nav-list__link"
+                >Después del masaje
               </a>
             </li>
           </ul>
@@ -48,16 +53,17 @@
 
     <main class="section">
       <div class="container">
-        <h1 class="title-1">Preguntas y Respuestas</h1>
+        <h1 class="title-1">Antes del masaje</h1>
 
         <ul class="content-list">
           <li class="content-list__item">
             <h2 class="title-2">¿Duele?</h2>
             <p>
-              Parece un hematoma, pero en realidad los capilares permanecen
-              intactos y no hay dolor al tocarlos, a diferencia de un hematoma.
-              Y sólo quedan huellas en las primeras sesiones. Luego, cuando los
-              capilares mejoran, los rastros son prácticamente invisibles.
+              Las marcas de ventosas parecen moretones, pero en realidad los
+              capilares permanecen intactos y no hay dolor al tocarlos, a
+              diferencia de un hematoma. Y sólo quedan huellas en las primeras
+              sesiones. Luego, cuando los capilares mejoran, los rastros son
+              prácticamente invisibles.
             </p>
           </li>
           <li class="content-list__item">
