--- a/index.html
+++ b/index.html
@@ -36,7 +36,14 @@
             </li>
             <li class="nav-list__item">
               <a href="./contacts.html" class="nav-list__link"
-                >Preguntas y Respuestas etc
+                >Antes del masaje
+              </a>
+            </li>
+            <li class="nav-list__item">
+              <a
+                href="después.html"
+                class="nav-list__link"
+                >Después del masaje
               </a>
             </li>
           </ul>
@@ -217,11 +224,12 @@
           <div class="copyright">
             <p>© 2024 igor-mexicov.ru</p>
           </div>
-          -->
+          
         </div>
       </div>
     </footer>
-
+-->
+    </div>
     <script src="./js/main.js"></script>
   </body>
 </html>
