--- a/skills.html
+++ b/skills.html
@@ -38,7 +38,12 @@
             </li>
             <li class="nav-list__item">
               <a href="./contacts.html" class="nav-list__link"
-                >Preguntas y Respuestas etc
+                >Antes del masaje
+              </a>
+            </li>
+            <li class="nav-list__item">
+              <a href="después.html" class="nav-list__link"
+                >Después del masaje
               </a>
             </li>
           </ul>
