--- a/después.html
+++ b/después.html
@@ -57,8 +57,90 @@
 
         <ul class="content-list">
           <li class="content-list__item">
-            <h2 class="title-2"></h2>
-            <p></p>
+            <h2 class="title-2">Después de la primera intervención</h2>
+            <p>
+              Después de la primera intervención. Puede haber complicaciones
+              después de la primera intervención, que se resolverán en 2-3 días
+              como máximo.
+            </p>
+            <p>
+              Es posible que no experimente estas complicaciones, pero le será
+              útil saberlo:
+            </p>
+            <ul>
+              <li>puede tener fiebre después de la intervención</li>
+              <li>somnolencia</li>
+              <li>
+                la piel estará un poco dolorida, como una quemadura solar leve
+              </li>
+              <li>puede haber sensación de hematoma</li>
+              <li>puede sentir náuseas</li>
+            </ul>
+            <p>
+              Y no da miedo, es una reacción a corto plazo del cuerpo a un
+              impacto previamente desconocido para él.
+            </p>
+          </li>
+          <li class="content-list__item">
+            <h2 class="title-2">Aumento de la temperatura</h2>
+            <p>
+              Durante las 3 primeras sesiones, el organismo produce una
+              respuesta muy potente a los efectos del vacío. Se liberan
+              hormonas, mediadores y sustancias biológicamente activas. En raras
+              ocasiones, unas horas después de la sesión, se produce un aumento
+              de la temperatura de corta duración.
+            </p>
+          </li>
+          <li class="content-list__item">
+            <h2 class="title-2">¿Y un resfriado? ¡Diferencie!</h2>
+            <p>
+              En algunos casos, una persona puede estar simplemente enferma,
+              ¡así que no hay que confundir los síntomas! Si la afección está
+              relacionada con el masaje, la temperatura subirá al cabo de 2-3
+              horas y se mantendrá durante un máximo de 24 horas. Si dura más,
+              ¡se trata de un proceso diferente!
+            </p>
+          </li>
+          <li class="content-list__item">
+            <h2 class="title-2">Intoxicación</h2>
+            <p>
+              En las personas que no cuidan adecuadamente su salud, los tejidos
+              blandos se enlodan. El drástico aumento de los procesos
+              metabólicos libera una gran cantidad de toxinas en el torrente
+              sanguíneo. Después del procedimiento, en tales casos, se produce
+              una intoxicación. Sus síntomas son cefalea de localización
+              temporal y náuseas. Sus síntomas son cefalea de localización
+              temporal y náuseas.
+            </p>
+          </li>
+          <li class="content-list__item">
+            <h2 class="title-2">¿Cómo evitarlo?</h2>
+            <ul>
+              <li>Entrada sin problemas en el curso de masaje</li>
+              <li>Beber un vaso de agua tibia antes y después de la sesión</li>
+              <li>
+                Coma correctamente. Al menos durante la duración del curso de
+                masaje
+              </li>
+              <li>
+                Limpie el cuerpo de cualquier forma que no esté contraindicada
+              </li>
+            </ul>
+          </li>
+          <li class="content-list__item">
+            <h2 class="title-2">
+              ¿Qué hacer si ya se ha producido la intoxicación?
+            </h2>
+            <ul>
+              <li>Agua tibia y reposo</li>
+              <li>Beber un enterosorbente - preferiblemente enterosgel</li>
+              <li>No se asuste =)</li>
+              <li>
+                Tal reacción se produjo debido al estado general descuidado del
+                cuerpo, lo que necesita para hacer frente a ti mismo - seguir la
+                dieta y llevar a cabo la limpieza regular del cuerpo
+              </li>
+            </ul>
           </li>
           <li class="content-list__item">
             <h2 class="title-2"></h2>
