--- a/index.html
+++ b/index.html
@@ -1,118 +1,90 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Masaje Yoni – Igor Mexicov</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #111;
-      color: #e8d3a7;
-      line-height: 1.6;
-      padding: 40px 20px;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Servicios Privados – Igor Mexicov</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>LISTA DE PRECIOS – SERVICIOS PRIVADOS</h1>
+      <h2>por IGOR MEXICOV</h2>
 
-    .container {
-      max-width: 700px;
-      margin: 0 auto;
-    }
+      <ul>
+        <li>
+          Relajación profunda, despertar del cuerpo y las emociones, en un
+          ambiente seguro y privado
+        </li>
+        <li>
+          Enfoque corporal con formación en psicología – recibo mi título este
+          año, por eso busco un enfoque único para cada persona
+        </li>
+        <li>
+          Reputación comprobada en Facebook – opiniones de parejas con 15 años
+          de experiencia en el ambiente swinger
+        </li>
+        <li>
+          También ofrezco <strong>consultas psicológicas por texto</strong>, con
+          enfoque corporal y atención individualizada
+        </li>
+      </ul>
 
-    h1, h2 {
-      text-align: center;
-      color: #f1d7a1;
-    }
+      <h2>🔥 PAQUETES:</h2>
 
-    h1 {
-      font-size: 28px;
-      margin-bottom: 0;
-    }
+      <div class="table-container">
+        <table>
+          <thead>
+            <tr>
+              <th>Servicio</th>
+              <th>Duración</th>
+              <th>Precio</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Sesión individual (solo mujer)</td>
+              <td>90–120 min</td>
+              <td>2000 MXN</td>
+            </tr>
+            <tr>
+              <td>Primera sesión promocional (pareja)</td>
+              <td>90–120 min</td>
+              <td>1500 MXN</td>
+            </tr>
+            <tr>
+              <td>Sesión regular para parejas</td>
+              <td>90–120 min</td>
+              <td>2000–2200 MXN</td>
+            </tr>
+            <tr>
+              <td>Con desplazamiento</td>
+              <td>—</td>
+              <td>+300 MXN</td>
+            </tr>
+            <tr>
+              <td>Consulta psicológica por texto/chat</td>
+              <td>20–30 min</td>
+              <td>300 MXN</td>
+            </tr>
+            <tr>
+              <td>Paquete de 5 consultas escritas</td>
+              <td>Flexible</td>
+              <td>1200 MXN</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
-    h2 {
-      font-size: 20px;
-      margin-top: 0;
-      margin-bottom: 30px;
-    }
-
-    ul {
-      padding-left: 20px;
-      margin-bottom: 30px;
-    }
-
-    .table-container {
-      overflow-x: auto;
-      margin-bottom: 30px;
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      background-color: #1b1b1b;
-    }
-
-    th, td {
-      border: 1px solid #444;
-      padding: 10px;
-      text-align: center;
-    }
-
-    th {
-      background-color: #222;
-      color: #f1d7a1;
-    }
-
-    .footer {
-      font-size: 16px;
-      margin-top: 30px;
-      text-align: left;
-    }
-  </style>
-</head>
-<body>
-  <div class="container">
-    <h1>LISTA DE PRECIOS – MASAJE YONI</h1>
-    <h2>por IGOR MEXICOV</h2>
-
-    <ul>
-      <li>Relajación profunda, despertar del cuerpo y las emociones, en un ambiente seguro y privado</li>
-      <li>Enfoque corporal con formación en psicología – recibo mi título este año, por eso busco un enfoque único para cada persona</li>
-      <li>Reputación comprobada en Facebook – opiniones de parejas con 15 años de experiencia en el ambiente swinger</li>
-    </ul>
-
-    <h2>🔥 PAQUETES:</h2>
-
-    <div class="table-container">
-      <table>
-        <thead>
-          <tr>
-            <th>Servicio</th>
-            <th>Duración</th>
-            <th>Precio</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>Sesión individual (solo mujer)</td>
-            <td>90–120 min</td>
-            <td>2000 MXN</td>
-          </tr>
-          <tr>
-            <td>Primera sesión promocional (pareja)</td>
-            <td>90–120 min</td>
-            <td>1500 MXN</td>
-          </tr>
-          <tr>
-            <td>Sesión regular para parejas</td>
-            <td>90–120 min</td>
-            <td>2000–2200 MXN</td>
-          </tr>
-          <tr>
-            <td>Con desplazamiento</td>
-            <td>—</td>
-            <td>+300 MXN</td>
-          </tr>
-        </tbody>
-      </table>
-    </d
+      <div class="footer">
+        <p>
+          • Lugar privado con alberca en Cancún<br />
+          • Fotos y videos íntimos disponibles bajo confianza<br />
+          • Reservas vía
+          <a href="https://wa.me/5215639305210" target="_blank">WhatsApp</a> o
+          <a href="https://t.me/ayavonaamimi" target="_blank">Telegram</a>
+        </p>
+      </div>
+    </div>
+  </body>
+</html>
