--- a/index.html
+++ b/index.html
@@ -43,20 +43,33 @@
           </thead>
           <tbody>
             <tr>
-              <td>Sesión individual (solo mujer)</td>
-              <td>90–120 min</td>
-              <td>2000 MXN</td>
-            </tr>
-            <tr>
-              <td>Primera sesión promocional (pareja)</td>
-              <td>90–120 min</td>
-              <td>1500 MXN</td>
-            </tr>
-            <tr>
-              <td>Sesión regular para parejas</td>
-              <td>90–120 min</td>
-              <td>2000–2200 MXN</td>
-            </tr>
+  <td>Sesión de masaje Yoni (solo mujer)</td>
+  <td>90–120 min</td>
+  <td>2000 MXN</td>
+</tr>
+<tr>
+  <td>Primera sesión promocional de masaje Yoni (pareja)</td>
+  <td>90–120 min</td>
+  <td>1500 MXN</td>
+</tr>
+<tr>
+  <td>Sesión regular de masaje Yoni para parejas</td>
+  <td>90–120 min</td>
+  <td>2000–2200 MXN</td>
+</tr>
+            <td>Masaje relajante (cuerpo completo, antiestrés)</td>
+  <td>60–90 min</td>
+  <td>1000–1300 MXN</td>
+</tr>
+<tr>
+  <td>Masaje terapéutico (zonas específicas, contracturas)</td>
+  <td>60–90 min</td>
+  <td>1200–1500 MXN</td>
+</tr>
+<tr>
+  <td>Masaje anticelulítico (con aceite especial)</td>
+  <td>60 min</td>
+  <td>1300 MXN</td>
             <tr>
               <td>Con desplazamiento</td>
               <td>—</td>
