--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
           de experiencia en el ambiente swinger
         </li>
         <li>
-          También ofrezco <strong>consultas psicológicas por texto</strong>, con
-          enfoque corporal y atención individualizada
+          También ofrezco <strong>apoyo emocional y escucha activa por chat</strong>, con enfoque corporal y atención individualizada
         </li>
       </ul>
 
@@ -76,12 +75,12 @@
               <td>+300 MXN</td>
             </tr>
             <tr>
-              <td>Consulta psicológica por texto/chat</td>
+              <td>Apoyo emocional por chat</td>
               <td>20–30 min</td>
               <td>300 MXN</td>
             </tr>
             <tr>
-              <td>Paquete de 5 consultas escritas</td>
+              <td>Paquete de 5 apoyos por texto</td>
               <td>Flexible</td>
               <td>1200 MXN</td>
             </tr>
