fixed things around form

--- a/form.html
+++ b/form.html
@@ -7,45 +7,47 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>📝 Formulario antes del masaje</h1>
-    <form id="massage-form">
-      <label>Nombre:</label>
-      <input type="text" name="nombre" required />
+    <div class="container">
+      <h1>📝 Formulario antes del masaje</h1>
+      <form id="massage-form">
+        <label>Nombre:</label>
+        <input type="text" name="nombre" required />
 
-      <label>Edad:</label>
-      <input type="number" name="edad" required />
+        <label>Edad:</label>
+        <input type="number" name="edad" required />
 
-      <label>WhatsApp:</label>
-      <input type="text" name="whatsapp" required />
+        <label>WhatsApp:</label>
+        <input type="text" name="whatsapp" required />
 
-      <label>¿Tiene enfermedades crónicas?</label>
-      <input type="text" name="cronicas" placeholder="Sí / No y cuáles" />
+        <label>¿Tiene enfermedades crónicas?</label>
+        <input type="text" name="cronicas" placeholder="Sí / No y cuáles" />
 
-      <label>¿Ha tenido operaciones?</label>
-      <input type="text" name="operaciones" placeholder="Sí / No y detalles" />
+        <label>¿Ha tenido operaciones?</label>
+        <input type="text" name="operaciones" placeholder="Sí / No y detalles" />
 
-      <label>¿Problemas cardíacos?</label>
-      <input type="text" name="corazon" placeholder="Sí / No" />
+        <label>¿Problemas cardíacos?</label>
+        <input type="text" name="corazon" placeholder="Sí / No" />
 
-      <label>¿Alergia a aceites u otros?</label>
-      <input type="text" name="alergias" placeholder="Sí / No y cuáles" />
+        <label>¿Alergia a aceites u otros?</label>
+        <input type="text" name="alergias" placeholder="Sí / No y cuáles" />
 
-      <label>¿Problemas en la piel?</label>
-      <input type="text" name="piel" placeholder="Sí / No" />
+        <label>¿Problemas en la piel?</label>
+        <input type="text" name="piel" placeholder="Sí / No" />
 
-      <label>Tipo de masaje deseado:</label>
-      <select name="tipo">
-        <option>Relajante</option>
-        <option>Terapéutico</option>
-        <option>Anticelulítico</option>
-        <option>No estoy seguro(a)</option>
-      </select>
+        <label>Tipo de masaje deseado:</label>
+        <select name="tipo">
+          <option>Relajante</option>
+          <option>Terapéutico</option>
+          <option>Anticelulítico</option>
+          <option>No estoy seguro(a)</option>
+        </select>
 
-      <label>Comentarios o restricciones:</label>
-      <textarea name="comentarios" rows="3"></textarea>
+        <label>Comentarios o restricciones:</label>
+        <textarea name="comentarios" rows="3"></textarea>
 
-      <button type="submit">Enviar</button>
-    </form>
+        <button type="submit">Enviar</button>
+      </form>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
