--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
           </tbody>
         </table>
       </div>
-
+      <div class="form-button">
+  <a href="form.html" class="button-link">📝 Rellenar formulario antes del masaje</a>
+</div>
       <div class="footer">
         <p>
           • Lugar privado con alberca en Cancún<br />
