--- a/index.html
+++ b/index.html
@@ -43,46 +43,46 @@
           <tbody>
             <tr>
   <td>Sesión de masaje Yoni (solo mujer)</td>
-  <td>90–120 min</td>
-  <td>2000 MXN</td>
+  <td>120 min</td>
+  <td><s>2000 MXN</s><br><strong>1000 MXN</strong></td>
 </tr>
 <tr>
   <td>Primera sesión promocional de masaje Yoni (pareja)</td>
-  <td>90–120 min</td>
-  <td>1500 MXN</td>
+  <td>120 min</td>
+  <td><s>1500 MXN</s><br><strong>750 MXN</strong></td>
 </tr>
 <tr>
   <td>Sesión regular de masaje Yoni para parejas</td>
   <td>90–120 min</td>
-  <td>2000–2200 MXN</td>
+  <td><s>2000–2200 MXN</s><br><strong>500–600 MXN</strong></td>
 </tr>
-            <td>Masaje relajante (cuerpo completo, antiestrés)</td>
+  <td>Masaje relajante (cuerpo completo, antiestrés)</td>
   <td>60–90 min</td>
-  <td>1000–1300 MXN</td>
+  <td><s>1000–1300 MXN</s><br><strong>500–650 MXN</strong></td>
 </tr>
 <tr>
   <td>Masaje terapéutico (zonas específicas, contracturas)</td>
   <td>60–90 min</td>
-  <td>1200–1500 MXN</td>
+  <td><s>1200–1500 MXN</s><br><strong>600–750 MXN</strong></td>
 </tr>
 <tr>
   <td>Masaje anticelulítico (con aceite especial)</td>
   <td>60 min</td>
-  <td>1300 MXN</td>
+  <td><s>1300 MXN</s><br><strong>750 MXN</strong></td>
             <tr>
               <td>Con desplazamiento</td>
               <td>—</td>
-              <td>+300 MXN</td>
+              <td><s>+300 MXN</s><br><strong>+150 MXN</strong></td>
             </tr>
             <tr>
               <td>Apoyo emocional por chat</td>
               <td>20–30 min</td>
-              <td>300 MXN</td>
+              <td><s>300 MXN</s><br><strong>150 MXN</strong></td>
             </tr>
             <tr>
               <td>Paquete de 5 apoyos por texto</td>
               <td>Flexible</td>
-              <td>1200 MXN</td>
+              <td><s>1200 MXN</s><br><strong>600 MXN</strong></td>
             </tr>
           </tbody>
         </table>
