--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </ul>
 
       <h2>🔥 PAQUETES:</h2>
+      <p class="promo-aviso">⚠️ Todos los precios actuales son promociones por tiempo limitado</p>
 
       <div class="table-container">
         <table>
@@ -54,7 +55,7 @@
 <tr>
   <td>Sesión regular de masaje Yoni para parejas</td>
   <td>90–120 min</td>
-  <td><s>2000–2200 MXN</s><br><strong>500–600 MXN</strong></td>
+  <td><s>2000–2200 MXN</s><br><strong>1000–1100 MXN</strong></td>
 </tr>
   <td>Masaje relajante (cuerpo completo, antiestrés)</td>
   <td>60–90 min</td>
