fixed main text

--- a/index.html
+++ b/index.html
@@ -11,23 +11,24 @@
       <h1>LISTA DE PRECIOS – SERVICIOS PRIVADOS</h1>
       <h2>por IGOR MEXICOV</h2>
 
-      <ul>
-        <li>
-          Relajación profunda, despertar del cuerpo y las emociones, en un
-          ambiente seguro y privado
-        </li>
-        <li>
-          Enfoque corporal con formación en psicología – recibo mi título este
-          año, por eso busco un enfoque único para cada persona
-        </li>
-        <li>
-          Reputación comprobada en Facebook – opiniones de parejas con 15 años
-          de experiencia en el ambiente swinger
-        </li>
-        <li>
-          También ofrezco <strong>apoyo emocional y escucha activa por chat</strong>, con enfoque corporal y atención individualizada
-        </li>
-      </ul>
+<ul>
+  <li>
+    Soy <strong>masajista profesional con años de experiencia</strong> y <strong>formación en psicología</strong> — aplico un enfoque corporal profundo que ayuda a liberar tensiones y emociones acumuladas.
+  </li>
+  <li>
+    Ofrezco <strong>masajes personalizados</strong> adaptados a cada cuerpo, cada pareja y cada situación.
+  </li>
+  <li>
+    En este momento todos los precios tienen <strong>descuento temporal</strong> — es la mejor forma de conocernos y conectar con confianza.
+  </li>
+  <li>
+    También brindo <strong>apoyo emocional y escucha activa por chat</strong>, si prefieres empezar por una conversación privada.
+  </li>
+  <li>
+    Reputación comprobada en Facebook — opiniones reales de parejas con más de 15 años de experiencia en el ambiente swinger.
+  </li>
+</ul>
+
 
       <h2>🔥 PAQUETES:</h2>
       <p class="promo-aviso">⚠️ Todos los precios actuales son promociones por tiempo limitado</p>
