--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     También brindo <strong>apoyo emocional y escucha activa por chat</strong>, si prefieres empezar por una conversación privada.
   </li>
   <li>
-    Reputación comprobada en Facebook — opiniones reales de parejas con más de 15 años de experiencia en el ambiente swinger.
+    Reputación comprobada en Facebook — <a href="opiniones.html" target="_blank">opiniones reales</a> de parejas con más de 15 años de experiencia en el ambiente swinger.
   </li>
 </ul>
 
