--- a/index.html
+++ b/index.html
@@ -3,104 +3,88 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Servicios Privados – Igor Mexicov</title>
+    <title>Sitio oficial de Igor Mexicov</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
-      <h1>LISTA DE PRECIOS – SERVICIOS PRIVADOS</h1>
-      <h2>por IGOR MEXICOV</h2>
+      <h1>Sitio oficial de Igor Mexicov – Masaje, bienestar y conexión</h1>
 
-<ul>
-  <li>
-    Soy <strong>masajista profesional con años de experiencia</strong> y <strong>formación en psicología</strong> — aplico un enfoque corporal profundo que ayuda a liberar tensiones y emociones acumuladas.
-  </li>
-  <li>
-    Ofrezco <strong>masajes personalizados</strong> adaptados a cada cuerpo, cada pareja y cada situación.
-  </li>
-  <li>
-    En este momento todos los precios tienen <strong>descuento temporal</strong> — es la mejor forma de conocernos y conectar con confianza.
-  </li>
-  <li>
-    También brindo <strong>apoyo emocional y escucha activa por chat</strong>, si prefieres empezar por una conversación privada.
-  </li>
-  <li>
-    Reputación comprobada en Facebook — <a href="opiniones.html" target="_blank">opiniones reales</a> de parejas con más de 15 años de experiencia en el ambiente swinger.
-  </li>
-</ul>
+      <nav>
+        <ul class="menu">
+          <li><a href="#servicios">Servicios</a></li>
+          <li><a href="#opiniones">Opiniones</a></li>
+          <li><a href="#galeria">Galería</a></li>
+          <li><a href="#tienda">Tienda</a></li>
+          <li><a href="#contacto">Contacto</a></li>
+        </ul>
+      </nav>
 
+      <section id="servicios">
+        <h2>🔥 Servicios</h2>
+        <ul>
+          <li>
+            Soy <strong>masajista profesional con años de experiencia</strong> y
+            <strong>formación en psicología</strong>.
+          </li>
+          <li>
+            Ofrezco <strong>masajes personalizados</strong> adaptados a cada
+            cuerpo, cada pareja y cada situación.
+          </li>
+          <li>
+            También brindo
+            <strong>apoyo emocional y escucha activa por chat</strong>.
+          </li>
+          <li>
+            Reputación comprobada en Facebook — opiniones reales de parejas con
+            más de 15 años de experiencia en el ambiente swinger.
+          </li>
+        </ul>
+      </section>
 
-      <h2>🔥 PAQUETES:</h2>
-      <p class="promo-aviso">⚠️ Todos los precios actuales son promociones por tiempo limitado</p>
+      <section id="opiniones">
+        <h2>🗣 Opiniones reales</h2>
+        <div class="gallery">
+          <img src="img/photo_2025-05-30_22-56-22.jpg" />
+          <img src="img/Screenshot (1).png" />
+          <img src="img/Screenshot (3).png" />
+          <img src="img/Screenshot (4).png" />
+        </div>
+        <div class="ver-mas">
+          <a href="opiniones.html" target="_blank"
+            >📂 Ver todos los testimonios</a
+          >
+        </div>
+      </section>
 
-      <div class="table-container">
-        <table>
-          <thead>
-            <tr>
-              <th>Servicio</th>
-              <th>Duración</th>
-              <th>Precio</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-  <td>Sesión de masaje Yoni (solo mujer)</td>
-  <td>120 min</td>
-  <td><s>2000 MXN</s><br><strong>1000 MXN</strong></td>
-</tr>
-<tr>
-  <td>Primera sesión promocional de masaje Yoni (pareja)</td>
-  <td>120 min</td>
-  <td><s>1500 MXN</s><br><strong>750 MXN</strong></td>
-</tr>
-<tr>
-  <td>Sesión regular de masaje Yoni para parejas</td>
-  <td>90–120 min</td>
-  <td><s>2000–2200 MXN</s><br><strong>1000–1100 MXN</strong></td>
-</tr>
-  <td>Masaje relajante (cuerpo completo, antiestrés)</td>
-  <td>60–90 min</td>
-  <td><s>1000–1300 MXN</s><br><strong>500–650 MXN</strong></td>
-</tr>
-<tr>
-  <td>Masaje terapéutico (zonas específicas, contracturas)</td>
-  <td>60–90 min</td>
-  <td><s>1200–1500 MXN</s><br><strong>600–750 MXN</strong></td>
-</tr>
-<tr>
-  <td>Masaje anticelulítico (con aceite especial)</td>
-  <td>60 min</td>
-  <td><s>1300 MXN</s><br><strong>750 MXN</strong></td>
-            <tr>
-              <td>Con desplazamiento</td>
-              <td>—</td>
-              <td><s>+300 MXN</s><br><strong>+150 MXN</strong></td>
-            </tr>
-            <tr>
-              <td>Apoyo emocional por chat</td>
-              <td>20–30 min</td>
-              <td><s>300 MXN</s><br><strong>150 MXN</strong></td>
-            </tr>
-            <tr>
-              <td>Paquete de 5 apoyos por texto</td>
-              <td>Flexible</td>
-              <td><s>1200 MXN</s><br><strong>600 MXN</strong></td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="form-button">
-  <a href="form.html" class="button-link">📝 Rellenar formulario antes del masaje</a>
-</div>
-      <div class="footer">
+      <section id="galeria">
+        <h2>🖼 Galería</h2>
+        <p>Próximamente: fotos y videos con acceso privado.</p>
+      </section>
+
+      <section id="tienda">
+        <h2>🛍 Tienda</h2>
         <p>
-          • Lugar privado con alberca en Cancún<br />
-          • Fotos y videos íntimos disponibles bajo confianza<br />
-          • Reservas vía
-          <a href="https://wa.me/5215639305210" target="_blank">WhatsApp</a> o
-          <a href="https://t.me/ayavonaamimi" target="_blank">Telegram</a>
+          Próximamente: productos únicos de bienestar y psicología del diseño.
         </p>
-      </div>
+      </section>
+
+      <section id="contacto">
+        <h2>📍 Contacto y horario</h2>
+        <p>
+          De lunes a viernes: 8:00 a.m. – 5:00 p.m.<br />
+          Sábado: disponible todo el día<br />
+          Domingo: no disponible<br /><br />
+          Punto de referencia:
+          <a href="https://maps.app.goo.gl/iQwAJV75boejFo6m6" target="_blank"
+            >esta tienda cercana</a
+          >.<br />
+          WhatsApp:
+          <a href="https://wa.me/5215639305210" target="_blank"
+            >Enviar mensaje</a
+          >
+        </p>
+      </section>
     </div>
   </body>
 </html>
